--- a/static/index.html
+++ b/static/index.html
@@ -15,12 +15,12 @@
       <div class="usernamediv">
         <input
           type="text"
-          id="nameIn"
+          id="txtName"
           placeholder="Enter Username"
           required
           autofocus
         />
-        <button id="sendNameBtn">Submit Username</button>
+        <button id="btnSendName">Submit Username</button>
         <p id="usernamedets">Enter Unique Username To Chat</p>
       </div>
 
@@ -32,12 +32,14 @@
       <div class="inputdiv">
         <input
           type="text"
-          id="messagetext"
+          id="txtMessage"
           placeholder="Enter Message..."
           class="inputTxt"
         />
 
-        <button id="message" class="button inputBtn">Submit Message</button>
+        <button id="btnSendMessage" class="button inputBtn">
+          Submit Message
+        </button>
       </div>
     </div>
 
