--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,167 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Socket.io</title>
+    <title>JOR Node.js Chat App</title>
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="https://raw.githubusercontent.com/joeaoregan/joeaoregan.github.io/master/images/favicon.ico"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li>
+          <a href="https://joeaoregan.github.io/">
+            <i class="fa-solid fa-house" title="GitHub Pages Home"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/joeaoregan/joeaoregan.github.io">
+            <i class="fa-solid fa-code" title="This Project GitHub Repo"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/joeaoregan">
+            <i class="fa-brands fa-github" title="GitHub Profile"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/joeaoregan/">
+            <i class="fa-brands fa-linkedin" title="LinkedIn Profile"></i>
+          </a>
+        </li>
+        <li>
+          <div class="dropdown">
+            <button class="dropbtn">
+              <i class="fa-brands fa-react" title="React Projects"></i>
+            </button>
+            <div class="dropdown-content">
+              <a
+                href="https://joeaoregan.github.io/react-vite-nasa-apod-api-app/"
+                >NASA APOD API App</a
+              >
+              <a
+                href="https://joeaoregan.github.io/react-nasa-techtransfer-api-app/"
+                >NASA Tech Transfer API App</a
+              >
+              <a href="https://joeaoregan.github.io/react-apod-api-app/"
+                >NASA APOD API App 2</a
+              >
+              <a href="https://joeaoregan.github.io/react-swapi-app/"
+                >Star Wars SWAPI API App</a
+              >
+              <a href="https://joeaoregan.github.io/react-tic-tac-toe/"
+                >Tic Tac Toe</a
+              >
+              <a href="https://joeaoregan.github.io/react-todo-list/"
+                >Todo List</a
+              >
+              <a href="https://jor-react-full-stack-site.onrender.com/"
+                >Full Stack React Project: Blog</a
+              >
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="dropdown">
+            <button class="dropbtn">
+              <i class="fa-brands fa-node-js" title="Node.js"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="https://jor-connect5.onrender.com">Connect 5 JS</a>
+              <a href="https://antibody-js.onrender.com">Antibody JS </a>
+              <a href="https://spacequest.onrender.com/">SpaceQuest JS </a>
+              <a href="">Chat </a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="dropdown">
+            <button class="dropbtn">
+              <i class="fa-brands fa-r-project" title="R Programming"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="https://joeaoregan.github.io/2022_DAIE_GCA_JOR/">
+                Group CA: Descriptive & Inferential Analysis
+              </a>
+              <a href="https://joeaoregan.github.io/2022_DAIE_CA4_JOR1">
+                CA4: Generate & Populate DB
+              </a>
+              <a href="https://joeaoregan.github.io/2022_DAIE_CA4_JOR1/query">
+                CA4: Querying DB
+              </a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="dropdown">
+            <button class="dropbtn">
+              <i class="fa-brands fa-unity" title="Unity Projects"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="https://joeaoregan.github.io/LIT-Yr4-Unity-RollABall"
+                >Roll A Ball
+              </a>
+              <a href="https://joeaoregan.github.io/LIT-Yr4-Unity-SpaceShooter"
+                >Space Shooter
+              </a>
+              <a href="https://joeaoregan.github.io/LIT-Yr4-DigitalGameEngines"
+                >Zombie Apocalypse
+              </a>
+              <a
+                href="https://joeaoregan.github.io/unity-games/Unity/2d-roguelike.html"
+                >2D Roguelike (Unity Tutorial)
+              </a>
+              <a
+                href="https://joeaoregan.github.io/unity-games/Unity/2d-ufo.html"
+                >2D UFO (Unity Tutorial)
+              </a>
+              <a
+                href="https://joeaoregan.github.io/unity-games/Unity/nightmares.html"
+                >Nightmares (Unity Tutorial)
+              </a>
+              <a
+                href="https://joeaoregan.github.io/unity-games/Unity/tanks-original.html"
+                >Tanks (Unity Tutorial)
+              </a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="dropdown">
+            <button class="dropbtn">
+              <img
+                src="https://raw.githubusercontent.com/joeaoregan/joeaoregan.github.io/master/images//processing.svg"
+                alt="Processing Logo"
+                width="16px"
+                height="16px"
+                title="Processing"
+              />
+            </button>
+            <div class="dropdown-content">
+              <a href="https://joeaoregan.github.io/LIT-Yr3-Graphics/"
+                >Big Foot 3D Scene</a
+              >
+              <a href="https://joeaoregan.github.io/LIT-Yr3-Graphics/2d/"
+                >2D Scenes</a
+              >
+            </div>
+          </div>
+        </li>
+      </ul>
+    </nav>
+
     <h1>Simple NodeJS Chat Application</h1>
     <h2>by Joe O'Regan</h2>
 
