--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
           </a>
         </li>
         <li>
-          <a href="https://github.com/joeaoregan/joeaoregan.github.io">
+          <a href="https://github.com/JoeORegan/chat">
             <i class="fa-solid fa-code" title="This Project GitHub Repo"></i>
           </a>
         </li>
